~ move database to BooksModel + new defs.hpp contains database to objects mappings + connect BookInfoInputWidget in MainWindow
[Database]
! Avalibility table now are Avaibilities
~ queries edited

[Model]
~ EditableModel renamed to BooksModel and files renamed
+ add methods to get authors, avaibilities, genres, priorities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,13 @@ set(PROJECT_SRC
     src/mainwindow.hpp
     src/mainwindow.cpp
     src/mainwindow.ui
-    src/editablemodel.hpp
-    src/editablemodel.cpp
+    src/booksmodel.hpp
+    src/booksmodel.cpp
     src/vieweventfilter.hpp
     src/vieweventfilter.cpp
+    src/bookinfoinputwidget.ui
+    src/bookinfoinputwidget.hpp
+    src/bookinfoinputwidget.cpp
 
     src/util.hpp
 )
